--- a/Orange-notes-Interface/package.json
+++ b/Orange-notes-Interface/package.json
@@ -17,5 +17,10 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
     "vite": "^3.0.7"
-  }
+  },
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "João Paulo Gotardi Begiato",
+  "license": "MIT",
+  "description": ""
 }
