Instalações das depencias necessárias para colocar a API online, e teste dos procedimentos das rotas de GET, PUT, POST e DELETE, e correção dos erros encontrados com os procedimentos durante os testes.

--- a/Orange-notes-API/package.json
+++ b/Orange-notes-API/package.json
@@ -4,9 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "João Paulo Gotardi Begiato",
-  "license": "ISC"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "path": "^0.12.7",
+    "sqlite3": "^5.0.11",
+    "url": "^0.11.0"
+  },
+  "type": "module",
+  "devDependencies": {
+    "jest": "^29.0.1",
+    "nodemon": "^2.0.19"
+  }
 }
