--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "react-router-dom": "^6.3.0"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "react-router-dom": "^6.3.0",
+    "sqlite3": "^5.0.11"
   }
 }
