--- a/package.json
+++ b/package.json
@@ -1,9 +1,31 @@
 {
+  "name": "orange-notes-interface",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "axios": "^0.27.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "react-router-dom": "^6.3.0",
     "sqlite3": "^5.0.11"
-  }
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.0.1",
+    "vite": "^3.0.7"
+  },
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "João Paulo Gotardi Begiato",
+  "license": "MIT",
+  "description": ""
 }
